♻️ refactor(DiaryCard): Title and text extraction

--- a/src/SwashbucklerDiary.Rcl/Components/MyComponents/DiaryCard/DiaryCard.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MyComponents/DiaryCard/DiaryCard.razor
@@ -50,10 +50,10 @@
         <MListItem ThreeLine>
             <MListItemContent>
                 <div class="diary-card-title">
-                    @(title ?? I18n.T("Diary.Untitled"))
+                    @(Title ?? I18n.T("Diary.Untitled"))
                 </div>
                 <MListItemSubtitle>
-                    @text
+                    @Text
                 </MListItemSubtitle>
             </MListItemContent>
         </MListItem>
