--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/MinePage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/MinePage.razor
@@ -3,8 +3,7 @@
 @inherits ImportantComponentBase
 
 <MyAppBar>
-    <MToolbarTitle Class="font-weight-bold"
-                   Style="width:100%;">
+    <MToolbarTitle Class="font-weight-bold">
         @(I18n.T("Mine.Mine"))
     </MToolbarTitle>
     <MSpacer></MSpacer>
