--- a/src/SwashbucklerDiary.Rcl/wwwroot/css/app.css
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/css/app.css
@@ -226,6 +226,12 @@ a, .btn-link {
     position: absolute !important;
 }
 
+@media screen and (min-width:600px) {
+    .my-container {
+        padding: 24px !important;
+    }
+}
+
 .swiper {
     width: 100%;
 }
@@ -399,3 +405,50 @@ a, .btn-link {
 .theme--dark.m-application .second-background {
     background-color: #1e1e1e !important;
 }
+
+.m-list--nav .m-list-item, .m-list--nav .m-list-item:before {
+    border-radius: 8px;
+}
+
+@media screen and (min-width:600px) {
+    .m-toolbar__content, .m-toolbar__extension {
+        padding: 4px 24px
+    }
+}
+
+.my-tabs-chip.m-chip-group .m-slide-group__content {
+    padding: 0;
+}
+
+.my-tab-chip {
+    height: 36px !important;
+    background-color: transparent !important;
+    margin: 2px !important;
+}
+
+    .my-tab-chip.theme--light.m-chip:hover::before {
+        opacity: 0;
+    }
+
+    .my-tab-chip.theme--dark.m-chip:hover::before {
+        opacity: 0;
+    }
+
+    .my-tab-chip.theme--light.m-chip.m-chip--active:hover::before {
+        opacity: .12;
+    }
+
+    .my-tab-chip.theme--dark.m-chip.m-chip--active:hover::before {
+        opacity: .24;
+    }
+
+    .my-tab-chip .m-chip__content {
+        min-width: 64px;
+        justify-content: center;
+        transition: margin-left ease .2s, margin-right ease .2s;
+    }
+
+    .my-tab-chip.m-chip--active .m-chip__content {
+        margin-left: 12px;
+        margin-right: 12px;
+    }
