--- a/src/SwashbucklerDiary.Rcl/Components/MyComponents/MultiDisplay/MultiSearch.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MyComponents/MultiDisplay/MultiSearch.razor
@@ -12,6 +12,7 @@
     <DesktopContent>
         <MTextField @bind-Value="SearchContent"
                     Class="rounded-pill second-background"
+                    Style="max-width:200px;"
                     TValue="string"
                     Solo="true"
                     Flat="true"
