--- a/src/SwashbucklerDiary.WebAssembly/Page/Backups/BackupsPage.razor
+++ b/src/SwashbucklerDiary.WebAssembly/Page/Backups/BackupsPage.razor
@@ -1,6 +1,6 @@
 ﻿@page "/backups"
 @namespace SwashbucklerDiary.WebAssembly.Pages
-@inherits ImportantComponentBase
+@inherits BackupsPageBase
 
 <MyAppBar>
     <MButton Icon
@@ -9,18 +9,11 @@
             mdi-arrow-left
         </MIcon>
     </MButton>
-    <MTabs @bind-Value="tab"
-           ActiveClass="text-h6 font-weight-bold"
-           HideSlider="true">
-        <MTab Class="my-tab"
-              Ripple="false">
-            @(I18n.T("Backups.Local.Name"))
-        </MTab>
-        <MTab Class="my-tab"
-              Ripple="false">
-            @(I18n.T("Backups.WebDAV.Name"))
-        </MTab>
-    </MTabs>
+
+    <MultiTabList @bind-Value="tab"
+                  Items="tabNames">
+    </MultiTabList>
+
     <MSpacer></MSpacer>
 </MyAppBar>
 
