🐛 fix(AlertSettingPage): Selecting selected values causes crashes

--- a/src/SwashbucklerDiary.Rcl/Components/DialogComponents/SelectIconDialog.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/DialogComponents/SelectIconDialog.razor
@@ -20,7 +20,8 @@
         <MCardText Class="scroll-show pb-0 mb-5" Style="max-height:300px;">
             <MChipGroup Value="Value"
                         ValueChanged="ValueChanged"
-                        Column="true">
+                        Column="true"
+                        Mandatory="Mandatory">
                 @foreach (var item in iconListItems)
                 {
                     <MChip @key="item.Name"
