--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/AlertSettingPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/AlertSettingPage.razor
@@ -61,5 +61,6 @@
                   @bind-Value="@Timeout"
                   Title="@(I18n.T("Setting.Display.Alert.AlertTimeout.Name"))"
                   Items="timeoutItems"
-                  Text="@(item=>item.Key + "s")">
+                  Text="@(item=>item.Key + "s")"
+                  Mandatory="true">
 </SelectIconDialog>
