🆕 feat: add StatisticsCard setting

--- a/src/SwashbucklerDiary.Rcl/Components/MyComponents/DiaryCard/DiaryCardList.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MyComponents/DiaryCard/DiaryCardList.razor
@@ -14,7 +14,7 @@
             </Virtualize>
         </CascadingValue>
     </div>
-    @if (Value.Count > 0)
+    @if (Value.Count > 0 && showStatisticsCard)
     {
         <MultiDisplay Tablet="true">
             <DesktopContent>
