--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Export/ExportPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Export/ExportPage.razor
@@ -20,10 +20,16 @@
 
 <SwiperTabItems @bind-Value="tab">
     <SwiperTabItem>
-        <LocalExport></LocalExport>
+        <MContainer Class="my-container"
+                    Fluid="true">
+            <LocalExport></LocalExport>
+        </MContainer>
     </SwiperTabItem>
     <SwiperTabItem>
-        <LANTransfer></LANTransfer>
+        <MContainer Class="my-container"
+                    Fluid="true">
+            <LANTransfer></LANTransfer>
+        </MContainer>
     </SwiperTabItem>
 </SwiperTabItems>
 
