💄 style: update some style

--- a/src/SwashbucklerDiary.Rcl/Components/MyComponents/MultiDisplay/MultiTabList.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MyComponents/MultiDisplay/MultiTabList.razor
@@ -25,7 +25,7 @@
             {
                 <MChip Class="my-tab-chip"
                        Large="true"
-                       Ripple="true">
+                       Ripple="false">
                     @(I18n.T(item))
                 </MChip>
             }
