--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/SettingPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/SettingPage.razor
@@ -115,8 +115,8 @@
                     <MIcon>mdi-chevron-right</MIcon>
                 </MListItemAction>
             </MListItem>
-            <MDivider Class="mx-3"></MDivider>
-            <MListItem>
+            <MDivider Class="mx-3 hidden-sm-and-down"></MDivider>
+            <MListItem Class="hidden-sm-and-down">
                 <MListItemIcon>
                     <MIcon Class="list-item-icon">
                         mdi-chart-line
