--- a/src/SwashbucklerDiary.Rcl/Pages/History/HistoryPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/History/HistoryPage.razor
@@ -12,7 +12,7 @@
     else
     {
         <div class="float-calendar" style="cursor:pointer;" @onclick="()=>showFloatCalendar=true">
-            <MTextField Value="PickedDate"
+            <MTextField Value="SelectedDate"
                         Class="rounded-lg text-h6 font-weight-bold"
                         Dense="true"
                         Readonly="true"
@@ -26,25 +26,28 @@
 
     <MSpacer></MSpacer>
 
-    <MButton Icon="true"
-             OnClick="ResetDatePicker">
-        <MIcon>
-            mdi-calendar-refresh
-        </MIcon>
-    </MButton>
-
-    <MButton Icon="true"
-             OnClick="()=>showExportThisTime = true">
-        <MIcon>
-            mdi-export
-        </MIcon>
-    </MButton>
+    <MultiMenu @bind-Visible="showMenu"
+               DynamicListItems="menuItems">
+        <ActivatorContent>
+            <MButton @attributes="@context.Attrs"
+                     Icon="true">
+                <MultiDisplay>
+                    <DesktopContent>
+                        <MIcon>mdi-dots-horizontal</MIcon>
+                    </DesktopContent>
+                    <MobileContent>
+                        <MIcon>mdi-dots-vertical</MIcon>
+                    </MobileContent>
+                </MultiDisplay>
+            </MButton>
+        </ActivatorContent>
+    </MultiMenu>
 </MyAppBar>
 
 <ScrollContainer @ref="scrollContainer">
     <IntersectElement IntersectChanged="HandleIntersectChanged">
         <MDatePicker @key="datePickerKey"
-                     @bind-Value="PickedDate"
+                     @bind-Value="SelectedDate"
                      Class="rounded-lg my-picker mb-5 pt-4"
                      TValue="DateOnly"
                      FullWidth="true"
@@ -52,22 +55,21 @@
                      Color="primary"
                      Events="eventsDates"
                      EventColor='"primary"'
-                     Locale="@(I18n.Culture.Name)">
+                     SelectedDate Locale="@(I18n.Culture.Name)">
         </MDatePicker>
     </IntersectElement>
 
     <DiaryCardList @bind-Tags="Tags"
-                   Value="pickedDiaries"
+                   Value="selectedDiaries"
                    OnRemove="HandelOnRemove">
     </DiaryCardList>
 </ScrollContainer>
-
-<DatePickerDialog @bind-Value="PickedDate"
+<DatePickerDialog @bind-Value="SelectedDate"
                   @bind-Visible="showFloatCalendar"
                   Events="eventsDates"
                   EventColor='"primary"'>
 </DatePickerDialog>
 
 <ExportByTimeDialog @bind-Visible="showExportThisTime"
-                    Value="PickedDate">
+                    Value="SelectedDate">
 </ExportByTimeDialog>
