🐛 fix: When language changes, some texts are not changed in a timely manner

--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/MinePage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/MinePage.razor
@@ -31,10 +31,10 @@
                         </MListItemAvatar>
                         <MListItemContent>
                             <MListItemTitle Class="text-h6 font-weight-bold">
-                                @(userName)
+                                @(userName ?? I18n.T("AppName"))
                             </MListItemTitle>
                             <MListItemSubtitle>
-                                @(sign)
+                                @(sign ?? I18n.T("Mine.Sign"))
                             </MListItemSubtitle>
                         </MListItemContent>
                         <MListItemAction Style="align-self:unset;">
