💄 style: update some style

--- a/src/SwashbucklerDiary.Maui/Page/Backups/WebDAVBackups/WebDAVBackups.razor
+++ b/src/SwashbucklerDiary.Maui/Page/Backups/WebDAVBackups/WebDAVBackups.razor
@@ -78,7 +78,7 @@
     <MListItem>
         <MListItemIcon>
             <MIcon Class="list-item-icon">
-                mdi-image-outline
+                mdi-file-outline
             </MIcon>
         </MListItemIcon>
         <MListItemContent>
