--- a/src/SwashbucklerDiary.Rcl/Components/DialogComponents/SelectTagsDialog.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/DialogComponents/SelectTagsDialog.razor
@@ -17,7 +17,7 @@
                 <MIcon>mdi-close</MIcon>
             </MButton>
         </MCardTitle>
-        <MCardText Class="scroll-show"
+        <MCardText Class="scroll-show pb-0"
                    Style="max-height:200px;">
             <MChipGroup @bind-Values="SelectedTagIds"
                         Column="true"
