--- a/src/SwashbucklerDiary.Rcl/wwwroot/css/app.css
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/css/app.css
@@ -233,6 +233,14 @@ a, .btn-link {
     }
 }
 
+@media screen and (max-width:600px) {
+    .my-container {
+        padding-top: 0px !important;
+        padding-bottom: 0px !important;
+        
+    }
+}
+
 .swiper {
     width: 100%;
     height: 100%;
