--- a/src/SwashbucklerDiary.Rcl/Components/MyComponents/LocationCard/LocationCardList.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MyComponents/LocationCard/LocationCardList.razor
@@ -20,7 +20,7 @@
         <MultiDisplay Tablet="true">
             <DesktopContent>
                 <div class="card-list-assist-info">
-                    <LocationStatisticsCard Locations="Value">
+                    <LocationStatisticsCard Value="Value">
                     </LocationStatisticsCard>
                 </div>
             </DesktopContent>
