--- a/src/SwashbucklerDiary.Rcl/Components/MyComponents/TagCard/TagCard.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MyComponents/TagCard/TagCard.razor
@@ -26,19 +26,17 @@
                 </MListItemSubtitle>
             </MListItemContent>
 
-            <MListItemAction>
-                <div @onclick:stopPropagation="true">
-                    <MultiMenu @bind-Visible="ShowMenu"
-                               DynamicListItems="MenuItems"
-                               Context="menuContext">
-                        <ActivatorContent>
-                            <MButton @attributes="@menuContext.Attrs"
-                                     Icon="true">
-                                <MIcon>mdi-pencil-outline</MIcon>
-                            </MButton>
-                        </ActivatorContent>
-                    </MultiMenu>
-                </div>
+            <MListItemAction @onclick:stopPropagation="true">
+                <MultiMenu @bind-Visible="ShowMenu"
+                           DynamicListItems="MenuItems"
+                           Context="menuContext">
+                    <ActivatorContent>
+                        <MButton @attributes="@menuContext.Attrs"
+                                 Icon="true">
+                            <MIcon>mdi-pencil-outline</MIcon>
+                        </MButton>
+                    </ActivatorContent>
+                </MultiMenu>
             </MListItemAction>
         </MListItem>
     </MCard>
