--- a/src/SwashbucklerDiary.Rcl/Components/MyComponents/TagCard/TagCardList.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MyComponents/TagCard/TagCardList.razor
@@ -19,7 +19,7 @@
         <MultiDisplay Tablet="true">
             <DesktopContent>
                 <div class="card-list-assist-info">
-                    <TagStatisticsCard Tags="Value"
+                    <TagStatisticsCard Value="Value"
                                        Diaries="Diaries">
                     </TagStatisticsCard>
                 </div>
